# bft

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  shell.nix
.github/workflows/: rust.yml
bf-programs/: hello-world.bf  primes.bf
bft_interp/: Cargo.toml
bft_interp/src/: cellkind.rs  lib.rs  vm_error.rs
bft_types/: Cargo.toml
bft_types/src/: lib.rs  ops.rs  vm_error.rs
src/: cli.rs  main.rs
