[package]
name = "bft"
authors = ["Bradley Burns <bradleyburns00@gmail.com>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bft_interp",
    "bft_types"
]

[dependencies]
bft_interp = { path = "bft_interp" }
bft_types = { path = "bft_types" }
clap = { version = "4.0.0", features = ["cargo", "derive"] }
